Fix submit functionality on mobile

--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -60,9 +60,11 @@
 }
 
 .terminal-inputs {
+    align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    min-height: 21px;
 }
 
 .terminal-formattedInput {
@@ -83,9 +85,22 @@
     outline: 0;
 }
 
+.terminal-submit {
+    background: #3c3636;
+    border-radius: 8px;
+    color: #ebd3a4;
+    margin-left: 8px;
+    padding: 4px 8px;
+    user-select: none;
+}
+
 @media screen and (min-width: 700px) {
     .terminal-body {
         justify-content: flex-start;
+    }
+
+    .terminal-inputs {
+        align-items: flex-start;
     }
 
     .terminal-formattedInput {
@@ -98,6 +113,10 @@
         top: 0;
         left: 0;
         width: 0;
+    }
+
+    .terminal-submit {
+        display: none;
     }
 
     .terminal-cursor {
